# clean-cpp

./: CMakeLists.txt  Makefile  README.md  cargo-generate.toml  justfile  post.rhai
src/: lib.cpp
